--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ button {
 
 .button-primary {
     background-color: #4caf50;
+    margin-bottom: 5px;
 }
 
 .button-primary:hover {
@@ -122,7 +123,7 @@ input[type="radio"] {
 }
 
 
-#progress {
+.progress {
     width: 100%;
     background-color: #ddd;
     border-radius: 8px;
@@ -134,6 +135,13 @@ input[type="radio"] {
     height: 20px;
     background-color: #4caf50;
     width: 0%;
+    border-radius: 8px;
+}
+
+#timerBar {
+    height: 20px;
+    background-color: rgb(0, 81, 255);
+    width: 100%;
     border-radius: 8px;
 }
 
